# VOLAT

./: .gitignore  CMakeLists.txt  README.md  how_to_use_map.cpp  main.cpp  run.sh
.github/workflows/: actions.yml  c-cpp.yml  clang-format-check.yml  pylint.yml
modules/client/: Client.cpp  Client.h
modules/content/: Content.cpp  Content.h
modules/content/vehicles/: AtSpg.cpp  AtSpg.h  HeavyTank.cpp  HeavyTank.h  LightTank.cpp  LightTank.h  MediumTank.cpp  MediumTank.h  Spg.cpp  Spg.h  Tank.cpp  Tank.h
modules/core/: Core.cpp  Core.h
modules/game/: Game.cpp  Game.h
modules/map/: Hex.cpp  Hex.h  Map.cpp  Map.h  Position.cpp  Position.h
modules/player/: Player.cpp  Player.h
modules/state/: State.cpp  State.h  StateCamping.cpp  StateCamping.h  StateCapture.cpp  StateCapture.h  StateDefence.cpp  StateDefence.h  StateHealth.cpp  StateHealth.h  StateHunt.cpp  StateHunt.h
modules/state_machine/: AtSpgStrategy.cpp  AtSpgStrategy.h  HeavyTankStrategy.cpp  HeavyTankStrategy.h  LightTankStrategy.cpp  LightTankStrategy.h  MediumTankStrategy.cpp  MediumTankStrategy.h  SpgStrategy.cpp  SpgStrategy.h  StateMachine.cpp  StateMachine.h
modules/strategy/: Strategy.cpp  Strategy.h
visualizer/: README.md  requirements.txt  visualizer-guiless.py  visualizer.py
visualizer/modules/actions/: classes.py  controller.py  permanent.py
visualizer/modules/client/: classes.py  controller.py  permanent.py
visualizer/modules/core/: classes.py  permanent.py
visualizer/modules/map/: classes.py  permanent.py
visualizer/modules/visual/: classes.py  permanent.py
